--- a/webpage/src/App.css
+++ b/webpage/src/App.css
@@ -8,3 +8,24 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+.container { 
+  width: min(1170px, calc(100vw - 50px));
+  margin-inline: auto;
+
+  margin-left: 550px;
+
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+
+.contain {
+  width: min(1170px, calc(100vw - 50px));
+  margin-inline: auto;
+}
+
+.containerNew {
+  width: min(1170px, calc(100vw - 50px));
+  margin-inline: auto;
+}
